Feat: Add header with navigation links and button

--- a/pricelist.html
+++ b/pricelist.html
@@ -6,6 +6,29 @@
     <title>Pricelist - Garden Room</title>
 </head>
 <body>
-    
+    <header>
+        <a href="./index.html">
+            <h1 class="logo">Garden Room</h1>
+        </a>
+        <nav>
+            <ul>
+                <li>
+                    <a href="./index.html">Home</a>
+                </li>
+                <li>
+                    <a href="./services.html">Services</a>
+                </li>
+                <li>
+                    <a href="./pricelist.html" class="active">Pricelist</a>
+                </li>
+                <li>
+                    <a href="./contact.html">Contact</a>
+                </li>               
+            </ul>
+        </nav>
+        <button>Book Appointment</button>
+    </header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
