Styles: Add generic styles

--- a/services.html
+++ b/services.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="./assets/css/styles.css" >
 </head>
 <body>
+    
+    <!-- Header -->
     <header>
         <a href="./index.html">
             <h1 class="logo">Garden Room</h1>
@@ -30,7 +32,11 @@
         </nav>
         <button>Book Appointment</button>
     </header>
-    <main></main>
+
+    <!-- Main Content -->
+    <main>Services</main>
+
+    <!-- Footer -->
     <footer></footer>
 </body>
 </html>
