--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- meta tags for search engines -->
+    <meta name="description" content="Welcome to The Garden Room, your premier destination for hair styling and beauty services in Whetstone, Leicestershire. Our expert stylists offer a wide range of services, including cuts, coloring, treatments, and more, ensuring you leave feeling confident and rejuvenated. Book your appointment today!">
+    <meta name="keywords" content="hair salon, beauty salon, Whetstone, Leicestershire, haircuts, hair styling, coloring, treatments, hair care, The Garden Room">
     <title>Contact - Garden Room</title>
     <!-- Stylesheet -->
     <link rel="stylesheet" href="./assets/css/styles.css" >
