--- a/pricelist.html
+++ b/pricelist.html
@@ -19,7 +19,7 @@
     <!-- Header -->
     <header>
         <a href="./index.html">
-            <h1 class="logo">Garden Room</h1>
+            <img id="logo" src="./assets/images/Garden Room Logo.webp" alt="Garden Room Hair Salon Logo">
         </a>
         <nav>
             <ul>
