Style: Add basic header styles

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Header -->
     <header>
         <a href="./index.html">
-            <img id="logo" src="./assets/images/Garden Room Logo.webp" alt="Garden Room Hair Salon Logo">
+            <img id="logo" src="./assets/images/garden-room-logo.webp" alt="Garden Room Hair Salon Logo">
         </a>
         <nav>
             <ul>
