Style: Add styles to header links

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <img id="logo" src="./assets/images/garden-room-logo.webp" alt="Garden Room Hair Salon Logo">
         </a>
         <nav>
-            <ul>
+            <ul id="menu">
                 <li>
                     <a href="./index.html" class="active">Home</a>
                 </li>
