Style: Add nav bar button styles

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                     <a href="./contact.html">Contact</a>
                 </li>               
             </ul>
+            <button class="book-appointment-button">Book Appointment</button>
         </nav>
-        <button>Book Appointment</button>
     </header>
 
     <!-- Main Content -->
