Style: Add dropdown toggle to nav

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         <a href="./index.html">
             <img id="logo" src="./assets/images/garden-room-logo.webp" alt="Garden Room Hair Salon Logo">
         </a>
+        <input type="checkbox" id="nav-toggle" name="nav-toggle" >
+        <label for="nav-toggle" class="nav-toggle-label">X</label>
         <nav>
             <ul id="menu">
                 <li>
