Style: Add font awesome icon script to html docs

--- a/contact.html
+++ b/contact.html
@@ -45,5 +45,8 @@
 
     <!-- Footer -->
     <footer></footer>
+    
+    <!-- Font awesome Kit -->
+    <script src="https://kit.fontawesome.com/7dc7d0366e.js" crossorigin="anonymous"></script>
 </body>
 </html>
