--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <img id="logo" src="./assets/images/garden-room-logo.webp" alt="Garden Room Hair Salon Logo">
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle" >
-        <label for="nav-toggle" class="nav-toggle-label">X</label>
+        <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <nav>
             <ul id="menu">
                 <li>
@@ -47,5 +47,8 @@
 
     <!-- Footer -->
     <footer>Footer</footer>
+
+    <!-- Font awesome Kit -->
+    <script src="https://kit.fontawesome.com/7dc7d0366e.js" crossorigin="anonymous"></script>
 </body>
 </html>
