Doc: Add basic footer skelaton to index html

--- a/index.html
+++ b/index.html
@@ -46,7 +46,37 @@
     <main>Home</main>
 
     <!-- Footer -->
-    <footer>Footer</footer>
+    <footer>
+
+        <!-- address -->
+        <div>
+            <p>3 Reeves Close</p>
+            <p>Whetstone</p>
+            <p>Leicestershire</p>
+            <p>LE8 6YQ</p>
+        </div>
+
+        <!-- Icons -->
+        <div>
+            <ul id="social-networks">
+                <li>
+                    <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our facebook page, opens in a new tab">
+                        <i class="fa-brands fa-facebook"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Visit our instagram page, opens in a new tab">
+                        <i class="fa-brands fa-instagram"></i>
+                    </a>
+                </li>
+            </ul>
+        </div>
+        
+        <!-- Logo -->
+        <div>
+            <img id="footer-logo" src="./assets/images/garden-room-logo.webp" alt="Garden Room Hair Salon Logo">
+        </div>
+    </footer>
 
     <!-- Font awesome Kit -->
     <script src="https://kit.fontawesome.com/7dc7d0366e.js" crossorigin="anonymous"></script>
