Style: Add footer styles for mobile first

--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
     <footer>
 
         <!-- address -->
-        <div>
-            <p>3 Reeves Close</p>
-            <p>Whetstone</p>
-            <p>Leicestershire</p>
-            <p>LE8 6YQ</p>
+        <div class="address-container">
+            <p class="address">3 Reeves Close</p>
+            <p class="address">Whetstone</p>
+            <p class="address">Leicestershire</p>
+            <p class="address">LE8 6YQ</p>
         </div>
 
         <!-- Icons -->
-        <div>
+        <div class="social-networks-container">
             <ul id="social-networks">
                 <li>
                     <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our facebook page, opens in a new tab">
