--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle" >
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
-        <nav>
+        <nav class="fade-in">
             <ul id="menu">
                 <li>
                     <a href="./index.html" class="active">Home</a>
