Doc: Add 404 page elements & styles

--- a/404.html
+++ b/404.html
@@ -15,6 +15,10 @@
     <link rel="stylesheet" href="./assets/css/styles.css" >
 </head>
 <body>
-    
+    <div class="error-page-container">
+        <h1>404</h1>
+        <h2>This Page Does Not Exist</h2>
+        <a href="./index.html" class="generic-button error-page-link">Click here to go back</a>
+    </div>
 </body>
 </html>
