--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <a href="./contact.html">Contact</a>
                 </li>               
             </ul>
-            <button class="book-appointment-button">Book Appointment</button>
+            <button class="generic-button">Book Appointment</button>
         </nav>
     </header>
 
