Style: Change nav link active class to relevant page

--- a/services.html
+++ b/services.html
@@ -26,10 +26,10 @@
         <nav class="fade-in">
             <ul id="menu">
                 <li>
-                    <a href="./index.html" class="active">Home</a>
+                    <a href="./index.html">Home</a>
                 </li>
                 <li>
-                    <a href="./services.html">Services</a>
+                    <a href="./services.html" class="active">Services</a>
                 </li>
                 <li>
                     <a href="./pricelist.html">Pricelist</a>
