--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
       <nav class="fade-in">
         <ul id="menu">
           <li>
-            <a href="./index.html" class="active">Home</a>
+            <a href="./index.html">Home</a>
           </li>
           <li>
             <a href="./services.html">Services</a>
@@ -60,7 +60,7 @@
             <a href="./pricelist.html">Pricelist</a>
           </li>
           <li>
-            <a href="./contact.html">Contact</a>
+            <a href="./contact.html" class="active">Contact</a>
           </li>
         </ul>
         <button class="generic-button">Book Appointment</button>
