--- a/pricelist.html
+++ b/pricelist.html
@@ -26,13 +26,13 @@
         <nav class="fade-in">
             <ul id="menu">
                 <li>
-                    <a href="./index.html" class="active">Home</a>
+                    <a href="./index.html">Home</a>
                 </li>
                 <li>
                     <a href="./services.html">Services</a>
                 </li>
                 <li>
-                    <a href="./pricelist.html">Pricelist</a>
+                    <a href="./pricelist.html" class="active">Pricelist</a>
                 </li>
                 <li>
                     <a href="./contact.html">Contact</a>
