Doc: Add elements to index.html

--- a/index.html
+++ b/index.html
@@ -43,7 +43,19 @@
     </header>
 
     <!-- Main Content -->
-    <main>Home</main>
+    <main>
+        <section>
+            <div class="hero-container">
+                <div class="hero-left"></div>
+                <div class="hero-right">
+                    <div class="content">
+                        <h1>This is a heading</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed faucibus risus at fermentum eleifend.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 
     <!-- Footer -->
     <footer>
