--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="hero-left"></div>
                 <div class="hero-right">
                     <div class="content">
-                        <h1>This is a heading</h1>
+                        <h1>Heading</h1>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed faucibus risus at fermentum eleifend.</p>
                     </div>
                 </div>
