Doc: Add second home page section with basic styles

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <!-- Main Content -->
     <main>
-        <section>
+        <section class="home-top-section">
             <div class="hero-container">
                 <div class="hero-left"></div>
                 <div class="hero-right">
@@ -54,6 +54,13 @@
                     </div>
                 </div>
             </div>
+        </section>
+        <section class="home-bottom-section">
+            <button>Services</button>
+            <div id="home-services-1" class="home-services-img"></div>
+            <div id="home-services-2" class="home-services-img"></div>
+            <div id="home-services-3" class="home-services-img"></div>
+            <div id="home-services-4" class="home-services-img"></div>
         </section>
     </main>
 
