Style: Finish mobile first home page styles

--- a/index.html
+++ b/index.html
@@ -56,11 +56,15 @@
             </div>
         </section>
         <section class="home-bottom-section">
-            <button>Services</button>
-            <div id="home-services-1" class="home-services-img"></div>
-            <div id="home-services-2" class="home-services-img"></div>
-            <div id="home-services-3" class="home-services-img"></div>
-            <div id="home-services-4" class="home-services-img"></div>
+            <a href="./services.html" class="generic-button">
+                Services
+            </a>
+            <div class="images-div">
+                <div id="home-services-1" class="home-services-img"></div>
+                <div id="home-services-2" class="home-services-img"></div>
+                <div id="home-services-3" class="home-services-img"></div>
+                <div id="home-services-4" class="home-services-img"></div>
+            </div> 
         </section>
     </main>
 
