--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </section>
         <section class="home-bottom-section">
             <a href="./services.html" class="generic-button">
-                Services
+                View Our Services
             </a>
             <div class="images-div">
                 <div id="home-services-1" class="home-services-img"></div>
