Doc: Add main elements to pricelist page

--- a/pricelist.html
+++ b/pricelist.html
@@ -43,7 +43,24 @@
     </header>
 
     <!-- Main Content -->
-    <main>Pricelist</main>
+    <main>
+        <div class="pricelist-page-container">
+            <h1>Pricelist</h1>
+            <div class="pricelist">
+                <div class="pricelist-img">
+
+                </div>
+                <div class="pricelist">
+                    <h2>Hair</h2>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                </div>
+                <button class="generic-button">Book Appointment</button>
+            </div>
+        </div>
+    </main>
 
     <!-- Footer -->
     <footer>
