Style: Add temporary image to contact pagw

--- a/contact.html
+++ b/contact.html
@@ -88,8 +88,8 @@
           </div>
           
           <!-- Contact image -->
-          <div class="contact-img-container">
-            <img src="" alt="Contact Page Image" />
+          <div class="contact-img-container" >
+            <div class="contact-img"></div>
           </div>
 
         </div>
