Style: Add style to pricelist page for mobiles

--- a/pricelist.html
+++ b/pricelist.html
@@ -45,19 +45,22 @@
     <!-- Main Content -->
     <main>
         <div class="pricelist-page-container">
-            <h1>Pricelist</h1>
             <div class="pricelist">
-                <div class="pricelist-img">
-
-                </div>
-                <div class="pricelist">
-                    <h2>Hair</h2>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
+                <h1>Pricelist</h1>
+                <div class="list">
+                    <div class="pricelist-left">
+                        <p>Hair</p>
+                        <p>Hair</p>
+                    </div>
+                    <div class="pricelist-right">
+                        <p>Hair</p>
+                        <p>Hair</p>
+                    </div>
                 </div>
                 <button class="generic-button">Book Appointment</button>
+                <div class="pricelist-img-container">
+                    <div class="pricelist-img"></div>
+                </div>
             </div>
         </div>
     </main>
