Doc: Add services html elements

--- a/services.html
+++ b/services.html
@@ -43,7 +43,50 @@
     </header>
 
     <!-- Main Content -->
-    <main>Services</main>
+    <main>
+        <section class="services-hero-section" >
+            <div class="service-hero-img">
+
+            </div>
+            <div>
+                <h1></h1>
+                <p></p>
+            </div>
+        </section>
+        <section class="services-bottom-section">
+            <div class="services-image-container">
+                <div class="service-container">
+                    <div class="service-1">
+                    </div>
+                    <div>
+                        <p></p>
+                        <p></p>
+                        <p></p>
+                    </div>
+                </div>
+                
+                <div class="service-container">
+                    <div class="service-2">
+                    </div>
+                    <div>
+                        <p></p>
+                        <p></p>
+                        <p></p>
+                    </div>
+                </div>
+
+                <div class="service-container">
+                    <div class="service-3">
+                    </div>
+                    <div>
+                        <p></p>
+                        <p></p>
+                        <p></p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 
     <!-- Footer -->
     <footer>
