Style: Add styles for the top section of the services page

--- a/services.html
+++ b/services.html
@@ -45,12 +45,12 @@
     <!-- Main Content -->
     <main>
         <section class="services-hero-section" >
-            <div class="service-hero-img">
-
-            </div>
-            <div>
-                <h1></h1>
-                <p></p>
+            <div class="services-hero-container">
+                <div class="service-hero-img"></div>
+                <div class="service-hero-text">
+                    <h1>Services</h1>
+                    <p>Browse the services we have to offer, if you would like any unique requests please use the contact form</p>
+                </div>
             </div>
         </section>
         <section class="services-bottom-section">
