Style: Add styles to bottom section of services page for mobiles

--- a/services.html
+++ b/services.html
@@ -56,32 +56,32 @@
         <section class="services-bottom-section">
             <div class="services-image-container">
                 <div class="service-container">
-                    <div class="service-1">
+                    <div class="service-1 service-image">
                     </div>
                     <div>
-                        <p></p>
-                        <p></p>
-                        <p></p>
+                        <p>some text</p>
+                        <p>some text</p>
+                        <p>some text</p>
                     </div>
                 </div>
                 
                 <div class="service-container">
-                    <div class="service-2">
+                    <div class="service-2 service-image">
                     </div>
                     <div>
-                        <p></p>
-                        <p></p>
-                        <p></p>
+                        <p>some text</p>
+                        <p>some text</p>
+                        <p>some text</p>
                     </div>
                 </div>
 
                 <div class="service-container">
-                    <div class="service-3">
+                    <div class="service-3 service-image">
                     </div>
                     <div>
-                        <p></p>
-                        <p></p>
-                        <p></p>
+                        <p>some text</p>
+                        <p>some text</p>
+                        <p>some text</p>
                     </div>
                 </div>
             </div>
