Style: Add text styles to services page

--- a/services.html
+++ b/services.html
@@ -58,9 +58,8 @@
                 <div class="service-container">
                     <div class="service-1 service-image">
                     </div>
-                    <div>
-                        <p>some text</p>
-                        <p>some text</p>
+                    <div class="service-container-text">
+                        <h2>some text</h2>
                         <p>some text</p>
                     </div>
                 </div>
@@ -68,9 +67,8 @@
                 <div class="service-container">
                     <div class="service-2 service-image">
                     </div>
-                    <div>
-                        <p>some text</p>
-                        <p>some text</p>
+                    <div class="service-container-text">
+                        <h2>some text</h2>
                         <p>some text</p>
                     </div>
                 </div>
@@ -78,9 +76,8 @@
                 <div class="service-container">
                     <div class="service-3 service-image">
                     </div>
-                    <div>
-                        <p>some text</p>
-                        <p>some text</p>
+                    <div class="service-container-text">
+                        <h2>some text</h2>
                         <p>some text</p>
                     </div>
                 </div>
