Style: Add book appointment button to services page

--- a/services.html
+++ b/services.html
@@ -81,6 +81,7 @@
                         <p>some text</p>
                     </div>
                 </div>
+                <button class="generic-button services-button">Book Appointment</button>
             </div>
         </section>
     </main>
