Doc: Add real text content to site

--- a/pricelist.html
+++ b/pricelist.html
@@ -49,12 +49,9 @@
                 <h1>Pricelist</h1>
                 <div class="list">
                     <div class="pricelist-left">
-                        <p>Hair</p>
-                        <p>Hair</p>
-                    </div>
-                    <div class="pricelist-right">
-                        <p>Hair</p>
-                        <p>Hair</p>
+                        <p>Cut & Blow dry</p>
+                        <p>Coloring</p>
+                        <p>Perm Treatment</p>
                     </div>
                 </div>
                 <button class="generic-button">Book Appointment</button>
