--- a/services.html
+++ b/services.html
@@ -59,8 +59,8 @@
                     <div class="service-1 service-image">
                     </div>
                     <div class="service-container-text">
-                        <h2>some text</h2>
-                        <p>some text</p>
+                        <h2>Cut & Blow dry</h2>
+                        <p>Transform your look with expert precision and a sleek finish. Our professional stylists will sculpt your hair to perfection and leave you feeling fabulous.</p>
                     </div>
                 </div>
                 
@@ -68,8 +68,8 @@
                     <div class="service-2 service-image">
                     </div>
                     <div class="service-container-text">
-                        <h2>some text</h2>
-                        <p>some text</p>
+                        <h2>Coloring</h2>
+                        <p>Elevate your style with vibrant hues or subtle highlights. Our skilled colorists will customize the perfect shade to enhance your natural beauty and leave you with stunning, head-turning locks.</p>
                     </div>
                 </div>
 
@@ -77,8 +77,8 @@
                     <div class="service-3 service-image">
                     </div>
                     <div class="service-container-text">
-                        <h2>some text</h2>
-                        <p>some text</p>
+                        <h2>Perm Treatments</h2>
+                        <p>Add texture and volume to your hair with our premium perm services. Whether you desire loose waves or tight curls, our experienced stylists will create a customized look that lasts, giving you effortless style and bounce.</p>
                     </div>
                 </div>
                 <button class="generic-button services-button">Book Appointment</button>
