--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                 <div class="hero-left"></div>
                 <div class="hero-right">
                     <div class="content">
-                        <h1>Heading</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed faucibus risus at fermentum eleifend.</p>
+                        <h1>Welcome</h1>
+                        <p>Indulge in a private hair experience surrounded by nature. Our garden room salon offers tranquility and personalized care with a view. Welcome to a peaceful haven for your beauty needs.</p>
                     </div>
                 </div>
             </div>
