--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/favicon-16x16.png">
     <!-- Stylesheet -->
     <link rel="stylesheet" href="./assets/css/styles.css" >
+    <!-- Booking button script -->
+    <script id="timelyScript" src="//book.gettimely.com/widget/book-button-v1.5.js"></script>
 </head>
 <body>
     
@@ -38,7 +40,7 @@
                     <a href="./contact.html">Contact</a>
                 </li>               
             </ul>
-            <button class="generic-button">Book Appointment</button>
+            <script>new timelyButton("gardenroomhairsalon", {"style":"dark"});</script>
         </nav>
     </header>
 
