--- a/services.html
+++ b/services.html
@@ -13,6 +13,8 @@
     <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/favicon-16x16.png">
     <!-- Stylesheet -->
     <link rel="stylesheet" href="./assets/css/styles.css" >
+    <!-- Booking button script -->
+    <script id="timelyScript" src="//book.gettimely.com/widget/book-button-v1.5.js"></script>
 </head>
 <body>
     
@@ -38,7 +40,7 @@
                     <a href="./contact.html">Contact</a>
                 </li>               
             </ul>
-            <button class="generic-button">Book Appointment</button>
+            <script>new timelyButton("gardenroomhairsalon", {"style":"dark"});</script>
         </nav>
     </header>
 
@@ -81,7 +83,7 @@
                         <p>Add texture and volume to your hair with our premium perm services. Whether you desire loose waves or tight curls, our experienced stylists will create a customized look that lasts, giving you effortless style and bounce.</p>
                     </div>
                 </div>
-                <button class="generic-button services-button">Book Appointment</button>
+                <script>new timelyButton("gardenroomhairsalon", {"style":"dark"});</script>
             </div>
         </section>
     </main>
