--- a/contact.html
+++ b/contact.html
@@ -79,9 +79,9 @@
             <form action="https://formspree.io/f/xeqyrwbq" method="POST" class="contact-form">
               <h1>Contact Us</h1>
               <label for="email">Email</label>
-              <input type="email" name="email" class="text-input"/>
+              <input type="email" name="email" class="text-input" required/>
               <label for="phone">Phone</label>
-              <input type="tel" name="phone" pattern="[0-9]*"  class="text-input"/>
+              <input type="tel" name="phone" pattern="[0-9]*"  class="text-input" required/>
               <label for="message">Message</label>
               <textarea name="message" class="textarea"></textarea>
               <br>
