Doc: Add comments to html files to better explain features

--- a/contact.html
+++ b/contact.html
@@ -39,6 +39,7 @@
   <body>
     <!-- Header -->
     <header>
+      <!-- Header Logo -->
       <a href="./index.html">
         <img
           id="logo"
@@ -50,6 +51,7 @@
       <label for="nav-toggle" class="nav-toggle-label"
         ><i class="fa-solid fa-bars"></i
       ></label>
+      <!-- Nav Menu-->
       <nav class="fade-in">
         <ul id="menu">
           <li>
