--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
     
     <!-- Header -->
     <header>
+        <!-- Header Logo -->
         <a href="./index.html">
             <img id="logo" src="./assets/images/garden-room-logo.webp" alt="Garden Room Hair Salon Logo">
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle" >
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
+        <!-- Nav Menu-->
         <nav class="fade-in">
             <ul id="menu">
                 <li>
