--- a/services.html
+++ b/services.html
@@ -20,11 +20,13 @@
     
     <!-- Header -->
     <header>
+        <!-- Header Logo -->
         <a href="./index.html">
             <img id="logo" src="./assets/images/garden-room-logo.webp" alt="Garden Room Hair Salon Logo">
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle" >
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
+        <!-- Nav Menu-->
         <nav class="fade-in">
             <ul id="menu">
                 <li>
@@ -46,6 +48,7 @@
 
     <!-- Main Content -->
     <main>
+        <!-- Services hero section -->
         <section class="services-hero-section" >
             <div class="services-hero-container">
                 <div class="service-hero-img"></div>
@@ -55,6 +58,7 @@
                 </div>
             </div>
         </section>
+        <!-- Services content -->
         <section class="services-bottom-section">
             <div class="services-image-container">
                 <div class="service-container">
