Doc: Add img element instead of background to improve accessibilty to the image

--- a/contact.html
+++ b/contact.html
@@ -94,7 +94,7 @@
           
           <!-- Contact image -->
           <div class="contact-img-container" >
-            <div class="contact-img"></div>
+            <img src="./assets/images/the-salon.webp" alt="Image of the hair salon from behind the chair looking out towards the garden">
           </div>
 
         </div>
